fixed bug with invisible dragging controller

--- a/src/DraggingController.css
+++ b/src/DraggingController.css
@@ -1,4 +1,4 @@
-.DraggingController {
+.draggingController {
     z-index: 100;
 
     position: absolute;
